Fix for top level menu item clicks on tablet

--- a/navigation/component.less
+++ b/navigation/component.less
@@ -1,5 +1,5 @@
 ﻿//The Options
-@menu-color:#015ca1;
+@menu-color:#049EBB;
 @link-color:#fff;
 @active-link-color:#fff;
 @active-link-bg-color:rgba(255,248,213,0.1);
